2009-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* mail/emacsbug.el (report-emacs-bug): Clarify that the
	keybindings apply to the mail buffer (Bug#4003).  Shrink help
	window to buffer.

	* whitespace.el (whitespace-mode, whitespace-newline-mode)
	(global-whitespace-mode, global-whitespace-newline-mode)
	(whitespace-toggle-options, global-whitespace-toggle-options): Doc
	fix (Bug#3660).

	* nxml/nxml-mode.el (nxml-balanced-close-start-tag): Use the value
	of xmltok-start before the end tag was inserted (Bug#2840).

	* progmodes/sh-script.el (sh-font-lock-paren): Handle case
	patterns that are preceded by an open-paren (Bug#1320).

2009-10-24  Sven Joachim  <svenjoac@gmx.de>

	* files.el (delete-directory): Delete symlinks to directories with
	delete-file (Bug#4739).

2009-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic/util.el (semantic-recursive-find-nonterminal-by-name):
	* cedet/semantic/tag.el (semantic-token-type-parent): Add WHEN
	argument to make-obsolete.

	* cedet/semantic/fw.el (semantic-alias-obsolete)
	(semantic-varalias-obsolete): Add optional WHEN argument.

2009-10-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-backend-for-registration): Rename from
	vc-get-backend-for-registration.  Update callers.

	* international/mule-cmds.el (set-language-info-alist): Purecopy lang-env.
	(leim-list-header, leim-list-entry-regexp): Change defvars to defconst.
	(charset): Purecopy the name.
	(define-char-code-property): Purecopy string arguments.

	* emacs-lisp/byte-run.el (make-obsolete, make-obsolete-variable):
	Purecopy string arguments.

	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map):
	* ediff-hook.el (menu-bar-ediff-menu):
	* buff-menu.el (Buffer-menu-mode-map): Purecopy names and tooltips.
	* bookmark.el (menu-bar-bookmark-map): Add :help and purecopy the name.

2009-10-24  Glenn Morris  <rgm@gnu.org>

	* comint.el (comint-dynamic-list-completions):
	* term.el (term-dynamic-list-completions): Use choose-completion rather